Don't obscure long user names with logo. Also fix logo being covered by the menu above in narrow windows (hover is still ugly, but clear).

--- a/mzalendo/core/static/css/nigeria.css
+++ b/mzalendo/core/static/css/nigeria.css
@@ -3367,7 +3367,6 @@ ul.social-buttons li {
 }
 #main-menu nav ul li a {
   color: black;
-  background: white;
   background-image: none;
 }
 #main-menu nav ul li a:hover {
@@ -3410,7 +3409,7 @@ body {
     background: url(../images/down-logo.png) 0 center no-repeat;
   }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 900px) {
   #logo {
     background: url(/static/images/mz-nigeria-logo.png) 0 center no-repeat;
   }
@@ -3422,20 +3421,9 @@ body {
 #header-search {
   margin: 15px 5px 5px 15px;
 }
-@media only screen and (min-width: 900px) {
-  #header-search {
-    margin: 40px 5px 5px 15px;
-  }
-}
 
 menu#site-user-tools {
   clear: right;
-}
-@media only screen and (min-width: 900px) {
-  menu#site-user-tools {
-    margin-top: 40px;
-    clear: none;
-  }
 }
 
 #login-box {
